[package]
name = "ash-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.38.0", features = ["linked"] }
anyhow = "1" # Error handling
log = "0.4" # logger
cgmath = "0.18" # replacement for GLM
png = "0.17" # loading texture pngs
pretty_env_logger = "0.5" # console print
thiserror = "1" # custom error type helper lib
winit = { version = "0.29.15", features = ["default", "rwh_05"]}
ash-window = "0.13.0"
raw-window-handle = "0.6.0"
lazy_static = "1.4.0"

