[package]
name = "volumetrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1" # Error handling
log = "0.4" # logger
png = "0.17" # loading texture pngs
pretty_env_logger = "0.5" # console print
thiserror = "1" # custom error type helper lib
winit = { version = "0.29.15", features = ["default", "rwh_05"]}
vulkano = "=0.34.1"
vulkano-shaders = "=0.34.0"
nalgebra = "0.32.5"
glam = "0.27.0"
ahash = "*"
shaderc = "0.8"
noise = "0.9.0"
